FIX Padding for text alignment in the report table

--- a/client/src/styles/sitesummary.css
+++ b/client/src/styles/sitesummary.css
@@ -1,5 +1,9 @@
-.package-summary{
+.package-summary {
     margin-top: 0;
+}
+
+.package-summary h3 {
+    margin-bottom: 0;
 }
 
 .package-summary .message {
@@ -13,15 +17,11 @@
 }
 
 .package-summary__title {
-  display:block;
+  display: block;
 }
 
 .gridfield-button-link {
     margin-bottom: 12px;
-}
-
-.package-summary table.grid-field__table tr td.col-Summary {
-    padding: 0;
 }
 
 .package-summary td {
@@ -32,7 +32,6 @@ a.package-summary__anchor {
     color: inherit;
     text-decoration: inherit;
     display: block;
-    padding: 1.23rem;
 }
 
 a.package-summary__anchor:hover,
